[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"

[lib]
name = "RusTOS"
path = "src/lib.rs"

[[bin]]
name = "RusTOS"
path = "src/bin.rs"

#[[test]]
#name = "compiletest"

[profile.dev]
panic = "abort"
test = false
bench = false


[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations